<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/home_root"
	android:orientation="vertical"
	android:layout_width="wrap_content"
	android:layout_height="fill_parent">

	<LinearLayout style="@style/Title">
		<ImageView
			style="@style/TitleLogo"
			android:contentDescription="description_logo"
			android:src="@drawable/title_logo" />

		<View style="@style/TitleSpring" />         
		<ImageView style="@style/TitleSeparator" />

		<ImageButton
			style="@style/TitleButton"
			android:id="@+id/btn_title_cats"
			android:contentDescription="description_refresh"
			android:src="@drawable/categories_title"
			android:onClick="onCatsClick" />

		<ImageView style="@style/TitleSeparator" />

	</LinearLayout>

	<RelativeLayout
		android:id="@+id/mainLayout"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:background="@drawable/general_bg"
		android:paddingLeft="30dp"
		android:paddingRight="40dp">

		<TextView
			android:id="@+id/searchTitle"
			android:paddingTop="30dip"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/searchtitle"
			android:textSize="16dip"
			android:textStyle="bold"
			android:textColor="@color/genwhite" />

		<EditText
			android:id="@+id/searchText"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/searchTitle"

			android:paddingLeft="10dip" />

		<TextView
			android:id="@+id/locationTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@id/searchText"
			android:text="@string/locationTitle"
			android:textSize="16dip"
			android:textStyle="bold"
			android:textColor="@color/genwhite" />

		<Spinner
			android:id="@+id/citiesSpinner"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/locationTitle"
			android:prompt="@string/cityChoice"
			android:entries="@array/citiesArray" />

		<!--
			<Button android:id="@+id/geoLocateMe"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:textSize="12dip"
			android:layout_below="@id/locationTitle"
			android:background="@drawable/btn_bg_pressed"
			android:layout_alignBaseline="@id/citiesSpinner" />
		-->

		<Button
			android:id="@+id/searchButton"
			android:text="@string/searchButtonText"
			android:textStyle="bold"
			android:textSize="16dip"
			android:shadowColor="#ffffff"
			android:shadowRadius="1.5"
			android:shadowDx="1"
			android:shadowDy="2"
			android:layout_below="@id/citiesSpinner"
			android:layout_width="120dip"
			android:layout_height="40dip"
			android:layout_alignParentRight="true"
			android:background="@drawable/def_button"
			android:onClick="onSearchClick" />



	</RelativeLayout>

	<LinearLayout
		android:orientation="horizontal"
		android:layout_marginTop="-65dip"
		android:background="@android:drawable/bottom_bar"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent"
		android:layout_alignBaseline="@id/home_root"
		android:layout_below="@+id/mainLayout">

		<Button
			style="@style/BottomButton"
			android:id="@+id/firstCat"
			android:drawableTop="@drawable/firstcat"
			android:text="@string/firstCat"
			android:onClick="onFirstCatClick"/>

		<Button
			style="@style/BottomButton"
			android:id="@+id/secondCat"
			android:drawableTop="@drawable/secondcat"
			android:text="@string/secondCat"
			android:onClick="onSecondCatClick"/>

		<Button
			style="@style/BottomButton"
			android:id="@+id/thirdCat"
			android:drawableTop="@drawable/thirdcat"
			android:text="@string/thirdCat"
			android:onClick="onThirdCatClick"/>

		<Button
			style="@style/BottomButton"
			android:id="@+id/fourthCat"
			android:drawableTop="@drawable/fourthcat"
			android:text="Амбуланти"
			android:onClick="onFourthCatClick"/>
	</LinearLayout>

</LinearLayout>
